--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -182,7 +182,7 @@ a cross (X).</p> <div class="rightAlign">2 mark</div>
 //http://stackoverflow.com/questions/21639305/d3js-take-data-from-an-array-instead-of-a-file
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = screen.width/2.8 - margin.left - margin.right,
+    width = window.innerWidth/2.8 - margin.left - margin.right,
     height = screen.height/2 - margin.top - margin.bottom;
 
 var formatPercent = d3.format("2d");
